--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
       property="og:url"
       content="https://navylapis.github.io/test/index.html"
     >
-    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:title" content="webおみくじ">
     <meta
       property="og:description"
-      content="ZEN Studyプログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
+      content="ZEN Studyプログラミング入門コース2で制作した、「おみくじ」サイトです。"
     >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>あなたのユーザ名が作ったあなたのいいところ診断</title>
+    <title>lapisが制作したおみくじサイト</title>
   </head>
   <body class="bg-primary-subtle">
     <header>
       <nav class="navbar bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+          <a class="navbar-brand" href="#">webおみくじ</a>
         </div>
       </nav>
     </header>
 
     <div class="container pt-5">
-      <h1>あなたのいいところは?</h1>
+      <h1>あなたの運勢は?</h1>
       <p>診断したい名前を入れて下さい</p>
 
       <div class="row">
         <div class="col-sm-9 col-lg-6">
           <div class="input-group mb-3">
             <input type="text" class="form-control " id="user-name" size="40" maxlength="20" />
-            <button class="btn btn-primary" id="assessment">診断する</button>
+            <button class="btn btn-primary" id="assessment">おみくじを引く</button>
           </div>
         </div>
       </div>
