--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-warning-subtle">
     <header>
-      <nav class="navbar bg-primary" data-bs-theme="dark">
+      <nav class="navbar bg-danger-subtle" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">webおみくじ</a>
         </div>
